--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <!-- content3 -->
     <div class="container">
         <h2>World's best coding plateform</h2>
-        <img class="image" src="/CONTENT/2.jpg" alt="">
+        <img class="image" src="CONTENT/2.jpg" alt="">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde eaque veritatis, nulla nihil magnam dignissimos
             optio est id modi atque tempora neque, eum dolores quis ratione facere quidem asperiores iste doloribus.
             Fuga quidem velit numquam at, id ducimus est facere ipsam aut ab quas quo! Facere, dignissimos. Rerum, quasi
@@ -258,7 +258,7 @@
     <div class="container">
         <h2>Web designer v/s Web designer</h2>
         <video controls controlsList="nodownload" loop>
-            <source src="/CONTENT/web development vs web design.mp4">
+            <source src="CONTENT/web development vs web design.mp4">
             Video is unsupported by your browser!
         </video>
     </div>
